--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ Many thanks to Robert Roth, Carl Sack, Rashauna Mead, Sam Matthews, John Czaplew
 <br><br>
 If you find any errors in our data or just have general feedback, please <a href="mailto:yourbodynotyourchoice@gmail.com ">contact us</a>.  
 <h3>Process</h3><p>
-All of the code for this project is available on GitHub, <a href="https://github.com/kkowalsky/yourbodynotyourchoice" target="_blank">here</a>. 
+All of the code for this project is available on GitHub, <a href="https://github.com/yourbodynotyourchoice/yourbodynotyourchoice.github.io/" target="_blank">here</a>. 
 <br>
 You can read about our processes on our various blog posts: <!-- add links --> <a href="http://www.eatincake.com/" target="_blank">Dylan</a>, <a href="http://www.kowalskycartography.wordpress.com/tag/575-final-project/" target="_blank">Katie</a>, and <a href="http://www.tolomaps.tumblr.com/tagged/yourbodynotyourchoice" target="_blank">Robin</a>.
 </p><section id= "citejump"></section>
