A few editorial/grammatical fixes

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <h2>Background</h2>
 <p>In 1973, the Supreme Court decided in the case of Roe v. Wade that abortion fell within the right to privacy protected by the Fourteenth Amendment. This decision prevented states from interfering with a woman’s access to abortion in the first trimester, but allowed states to regulate the second & third trimester provided the regulations protected the health of the mother.<sup><a href="#citejump">[1]</a></sup>
 <p><div class = "letscenter"><img src="img/BanMap.png"></div>
-<p>Since then, states have passed legislation to restrict a woman's access to abortion within the confines of the Roe v. Wade decision. Many have been more aggressive, legally fighting against Roe by re-litigating similar cases, some of which have indeed weakened it’s precedent. 
+<p>Since then, states have passed legislation to restrict a woman's access to abortion within the confines of the Roe v. Wade decision. Many have been more aggressive, legally fighting against Roe by re-litigating similar cases, some of which have indeed weakened its precedent. 
 <p>The abortion debate has became a more prominent topic in the political debates of the last two decades leading to a distinct rise in restrictive laws. More laws relating to abortion restrictions have been passed between 2011 and 2013 than were passed between 2001-2010.<sup><a href="#citejump">[2]</a></sup>
 <p><div class = "letscenter"><img src="img/OverviewGraph.png"></div>
 <section id ="overview"></section>
@@ -122,7 +122,7 @@
             GRADES 
 ===================================-->
 <div class = "chptrhead"><h2>The Report Card</h2></div>
-<p>We present grades as devised by <a href="http://www.naral.org/" target="_blank">NARAL</a>, which are based on each states policies regarding a woman's choice and access to abortions. Most of the failing grades come from state's which boast one or more of the restrictive laws discussed here while an “A” grade required laws which instead protected or further ensured choice and access.  
+<p>We present grades as devised by <a href="http://www.naral.org/" target="_blank">NARAL</a>, which are based on each state's policies regarding a woman's choice and access to abortions. Most of the failing grades come from states which boast one or more of the restrictive laws discussed here while an “A” grade required laws which instead protected or further ensured choice and access.  
 <p>We've taken the liberty of dropping the “+” and “-” from their grades for the sake of clarity. 
 <p><a href="http://www.prochoiceamerica.org/government-and-you/who-decides/methodology.html" target="_blank">More information on the methodology can be found at NARAL’s website.</a>
 <!-- ==============================
@@ -182,7 +182,7 @@ CPCs provide useful services like free pregnancy tests, ultrasounds, diapers, pa
 <p>The most recent type of state legislation introduced to restrict abortion are for mandatory ultrasounds. An ultrasound is a medical procedure that sends high frequency sound waves through a pregnant woman's body to create an image of the fetus inside.<sup><a href "#citejump">[17]</a></sup> For observations of the fetus's development, ultrasounds are great.
 <div class = "letscenter"><img src ="img/UltrasoundTimeline.png"></div>
 <p>Initially introduced in the late 1980’s, state legislation regarding ultrasounds has become more prevalent since 2004. These laws range from simply requiring doctors to inform a woman of the procedure, to requiring it to be offered, to mandatory prior to an abortion.
-<p>Ultrasounds are not a medically necessary component of a first-trimester abortion. When they become a requirement, adding another hurdle to the process. Further intrusive is the policy in Louisiana, Texas, and Virginia that require the ultrasound image to be shown and described ultrasound procedure. While patients are allowed to look away or close their eyes, depending on the circumstances of the abortion, it can be a <a href="http://www.texasobserver.org/we-have-no-choice-one-womans-ordeal-with-texas-new-sonogram-law/" target="_blank">emotionally painful experience</a>.</p>
+<p>Ultrasounds are not a medically necessary component of a first-trimester abortion. When they become a requirement, they add another hurdle to the process. Further intrusive is the policy in Louisiana, Texas, and Virginia that require the ultrasound image to be shown and described during the ultrasound procedure. While patients are allowed to look away or close their eyes, depending on the circumstances of the abortion, it can be an <a href="http://www.texasobserver.org/we-have-no-choice-one-womans-ordeal-with-texas-new-sonogram-law/" target="_blank">emotionally painful experience</a>.</p>
 <p>Mandatory ultrasounds replace informed-consent with coersion. Not about the ultimate decision, but how a woman chooses to get there.<sup><a href="#citejump">[18]</a></sup>
 <!-- ==============================
             MORE INFO 
