--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ CPCs provide useful services like free pregnancy tests, ultrasounds, diapers, pa
 <div class = "letscenter"><img src ="img/UltrasoundTimeline.png"></div>
 <p>Initially introduced in the late 1980’s, state legislation regarding ultrasounds has become more prevalent since 2004. These laws range from simply requiring doctors to inform a woman of the procedure, to requiring it to be offered, to mandatory prior to an abortion.
 <p>Ultrasounds are not a medically necessary component of a first-trimester abortion. When they become a requirement, they add another hurdle to the process. Further intrusive is the policy in Louisiana, Texas, and Virginia that require the ultrasound image to be shown and described during the ultrasound procedure. While patients are allowed to look away or close their eyes, depending on the circumstances of the abortion, it can be an <a href="http://www.texasobserver.org/we-have-no-choice-one-womans-ordeal-with-texas-new-sonogram-law/" target="_blank">emotionally painful experience</a>.</p>
-<p>Mandatory ultrasounds replace informed-consent with coersion. Not about the ultimate decision, but how a woman chooses to get there.<sup><a href="#citejump">[18]</a></sup>
+<p>Mandatory ultrasounds replace informed-consent with coercion. Not about the ultimate decision, but how a woman chooses to get there.<sup><a href="#citejump">[18]</a></sup>
 <!-- ==============================
             MORE INFO 
 ===================================-->
