Update style, work on popup

--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
     <link rel="author" type="text/plain" href="humans.txt" />
 
     <!-- Linking Web Font -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300|Poiret+One" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab' rel='stylesheet' type='text/css'>
     <!--/ Font -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
